# fractionalBignum

./: .gitignore  CMakeLists.txt  README.md  fractionalBignum.hpp  fractionalBignum_generic.hpp  makefile  utility.cpp  utility.hpp
examples/: basic_usage.cpp  ln2.cpp  speed_comparison.cpp
